# andrusone-fieldops

./: .pre-commit-config.yaml  .shellcheckrc  README.md  pyproject.toml  setup.sh
.github/workflows/: verify-devkit.yml
python/: compose.py  mod_front_matter.py  oracrawl.py  submit_prompt.py  topify.py.save
scripts/: devkit-init.sh  devkit-poetry-setup.sh  devkit-prereqs.sh  devkit-scaffold-samples.sh  devkit-ssh-setup.sh  devkit-verify-env.sh  devkit-verify-precommit.sh
shell/centos/: sample.sh
shell/rhel/: sample.sh
shell/ubuntu/: sample.sh
sql/ansi/: sample.sql
sql/plsql/: sample.sql
sql/source/: sample.sql
sql/tsql/: sample.sql
tests/: test_mod_front_matter.md  test_mod_front_matter.py  test_sample.py
